# Elysium

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: main.rs
src/bot/: dispatcher.rs  mod.rs  runtime.rs  webhook.rs
src/cache/: config.rs  mod.rs  registry.rs  typed.rs
src/config/: mod.rs
src/database/: mod.rs  mongo.rs  repository.rs  users.rs
src/database/models/: afk.rs  antiflood.rs  bye.rs  bye_settings.rs  common.rs  db_filter.rs  db_note.rs  filter.rs  group.rs  group_config.rs  message_context.rs  mod.rs  notes.rs  rules.rs  rules_settings.rs  user.rs  warn.rs  warns_data.rs  welcome.rs  welcome_settings.rs
src/database/repository/: bye_repository.rs  filter_repository.rs  group_settings_repo.rs  message_context_repository.rs  mod.rs  note_repository.rs  rules_repository.rs  warns_repository.rs  welcome_repository.rs
src/events/: antiflood.rs  bye.rs  filters.rs  mod.rs  welcome.rs
src/i18n/: en.json  id.json  mod.rs
src/permissions/: checker.rs  mod.rs
src/plugins/: admin.rs  afk.rs  antiflood.rs  approval.rs  ban.rs  bye.rs  filters.rs  mod.rs  mute.rs  notes.rs  pin.rs  ping.rs  purge.rs  rules.rs  settings.rs  start.rs  warn.rs  welcome.rs
src/plugins/help/: admin.rs  afk.rs  antiflood.rs  approval.rs  bye.rs  filters.rs  main_help.rs  mod.rs  notes.rs  purge.rs  rules.rs  warns.rs  welcome.rs
src/utils/: mod.rs  note_parser.rs  parser.rs  reply.rs  target.rs
